Update agent instructions with new lifecycle, caching, and parser facts
Reflect verified insights: reverse-order @PreDestroy, classpath
resolution caching in ClassesResolver, and the extended set of
supported @InjectVariable types.